# pleiotropy

./: .env.production  .gitignore  CLAUDE.md  CUDA_IMPLEMENTATION_ISSUE.md  DATA_MANIFEST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FACTORIZATION_RESULTS.md  INTEGRATION_COMPLETION_REPORT.md  LICENSE  MONITORING_GUIDE.md  NEURODNA_INTEGRATION_REPORT.md  QA_ANALYSIS_REPORT.md  README.md  SEMIPRIME_REPAIR_REPORT.md  SUBDIRECTORY_DEPLOYMENT_COMPLETE.md  TEST_SUITE_REPORT.md  TRIAL_DATABASE_FINAL_REPORT.md  UI_TESTING_REPORT.md  USER_GUIDE.md  alternative_deployment.md  api_server.py  benchmark_composite_cuda.py  benchmark_demo.py  check_neurodna.rs  check_product.py  complete_ecoli_workflow.py  composite_factorizer_demo.md  comprehensive_statistical_analysis.py  correct_verification.py  coverage.xml  create_test_data.py  cryptanalysis_performance_report.py  cuda_seeker_test.py  data_checksums.txt  demo_semiprime_seeker.py  deploy_subdirectory.sh  deploy_with_sudo.sh  (+59 more)
.hive-mind/: hive.db
algorithm_implementations/: complete_factorization.py  cuda_factorization.cu  cuda_wrapper.py  ecm_factorization.py  factorization_results.json  final_results.py  hybrid_factorization.py  performance_analysis.md  pollard_rho_brent.py  save_to_memory.py
batch_experiment_20_genomes_20250712_181857/: genome_list.json  run_batch_experiments.py  table_lifestyle_summary.csv  table_size_analysis.csv
benchmark_output/: analysis_results.json  summary_report.md
crypto_framework/: algorithm_design.md
data/: DATA_PROVENANCE.md  DATA_WARNING.md
debug_output/: analysis_results.json  summary_report.md
docs/: CUDA_ACCELERATION_GUIDE.md  CUDA_API_REFERENCE.md  CUDA_DOCUMENTATION_INDEX.md  CUDA_EXAMPLES.md  CUDA_MIGRATION_GUIDE.md  CUDA_PERFORMANCE_BENCHMARKS.md  CUDA_QUICK_START.md  CUDA_TROUBLESHOOTING.md  cuda_composite_factorizer.md  docker_gpu_setup.md  prime_factorization_performance.md  semiprime_seeker.md  web_deployment.md
examples/: ecoli_workflow.sh
experiment_20250712_153224/: download_ecoli.py  experiment_report.md  trait_definitions.json  traits.json  visualize_results.py
experiment_pseudomonas_20250712_154530/: comparative_analysis.py  download_pseudomonas.py  three_genome_comparison.md  traits_pseudomonas.json
experiment_salmonella_20250712_153735/: analyze_and_compare.py  download_salmonella.py  salmonella_analysis_report.md  traits_salmonella.json
experiments_20_genomes/: .gitignore  README.md  SCIENTIFIC_VERACITY_REPORT.md  batch_download.py  data_librarian_summary.md  default_traits.json  download_progress.json  download_tracker.py  experiment_plan.md  genome_acquisition.py  genome_utilities.py  qa_evaluation_framework.py  run_experiments.py  standard_traits.json  test_traits.json
genome_research/: codon_usage_ecoli.json  data_sources.md  ecoli_pleiotropic_genes.json  pleiotropy_overview.md  regulatory_elements.json  validate_public_data.py  validated_pleiotropic_genes.json
monitoring/: experiment_metrics_exporter.py  generate_grafana_dashboard.py  pleiotropy_experiments_dashboard.json  pleiotropy_simple_dashboard.json  pleiotropy_static_dashboard.json  pleiotropy_text_dashboard.json  prometheus.yml
nginx/: nginx.conf
output_ecoli_neurodna/: analysis_results.json  pleiotropic_genes.json  summary_report.md
rust_impl/: BUILDING_WITH_CUDA.md  CUDA_INTEGRATION.md  CUDA_LARGE_FACTORIZATION.md  Cargo.toml  build.rs  build_cuda.sh  build_wasm.sh  test_cuda_build.sh  test_integration.sh
rust_impl/.cargo/: config.toml
rust_impl/benches/: cuda_benchmarks.rs  prime_factorization_bench.rs
rust_impl/examples/: composite_factorizer_demo.rs  factor_2539123152460219.rs  factorization_example.rs  prime_factorization_demo.rs  semiprime_demo.rs
rust_impl/src/: compute_backend.rs  crypto_engine.rs  frequency_analyzer.rs  large_prime_factorization.rs  lib.rs  main.rs  ml_trait_detector.rs  neurodna_trait_detector.rs  prime_compute_backend.rs  prime_factorization.rs  semiprime_factorization.rs  sequence_parser.rs  trait_extractor.rs  trait_extractor_gpu.rs  types.rs
rust_impl/src/benchmark/: mod.rs  prime_factorization.rs  runner.rs  semiprime_factorization.rs
rust_impl/src/cuda/: PERFORMANCE_REPORT_TEMPLATE.md  README.md  TESTING_GUIDE.md  architecture.md  composite_factorizer.rs  device.rs  error.rs  features.rs  memory.rs  mod.rs  performance.rs  performance_benchmarks.md  prime_factorization.rs  semiprime_cuda.rs
rust_impl/src/cuda/kernels/: codon_counter.rs  frequency_calculator.rs  large_factorization.rs  matrix_processor.rs  mod.rs  pattern_matcher.rs  prime_factorizer.rs
rust_impl/src/cuda/tests/: TESTING_SUMMARY.md  mod.rs  test_codon_counter.rs  test_frequency_calculator.rs  test_full_pipeline_integration.rs  test_integration.rs  test_kernel_correctness.rs  test_matrix_processor.rs  test_memory.rs  test_pattern_matcher.rs  test_performance_benchmarks.rs
rust_impl/src/prime_factorization/: performance_monitor.rs  report_style.css
rust_impl/src/tests/: mod.rs  test_crypto_engine.rs  test_pipeline_debug.rs
rust_impl/tests/: composite_factorizer_tests.rs  cuda_integration_test.rs  prime_factorization_regression.rs  semiprime_regression.rs  test_prime_factorization.rs
(+395 files in other folders)
