[package]
name = "genomic_pleiotropy_cryptanalysis"
version = "0.1.0"
edition = "2021"
authors = ["Pleiotropy Research Team"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }

# Async runtime (tokio doesn't work in WASM, so we use conditional deps)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Bioinformatics
bio = "1.4"
bio-types = "1.0"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Statistics and math
statrs = "0.16"
ndarray = "0.15"
nalgebra = "0.32"

# Command line
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Testing
rand = "0.8"
neurodna = { version = "0.0.2", default-features = false }

# CLI output
colored = "2.0"

# For semiprime seeker
num-bigint = { version = "0.4", features = ["rand"] }
num-prime = "0.4"

# Time and date
chrono = "0.4"

# CUDA support
cudarc = { version = "0.10", optional = true }
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
cuda-driver-sys = { version = "0.3.0-alpha.1", optional = true }

# Additional dependencies for CUDA
bytemuck = { version = "1.14", optional = true }  # For safe transmutation of data
half = { version = "2.3", optional = true }       # For FP16 support on newer GPUs
cust = { version = "0.3", optional = true }       # Alternative CUDA wrapper (backup)
nvml-wrapper = { version = "0.9", optional = true } # NVIDIA Management Library for GPU monitoring

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

# Benchmarks disabled until implemented
# [[bench]]
# name = "decryption_bench"
# harness = false

[features]
default = []
cuda = ["dep:cudarc", "dep:cuda-runtime-sys", "dep:cuda-driver-sys", "dep:bytemuck", "dep:half", "dep:nvml-wrapper"]
cuda-debug = ["cuda"]  # Enable CUDA with debug info
cuda-alt = ["dep:cust", "dep:bytemuck", "dep:half"]  # Alternative CUDA implementation
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]

[profile.release]
lto = true
opt-level = 3

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "validate_factorization"
path = "src/bin/validate_factorization.rs"

[[bin]]
name = "semiprime_seeker"
path = "src/bin/semiprime_seeker.rs"
